--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,10 @@ body,
 :root {
   height: 100%;
 }
+
+.inset-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
