--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,21 @@ body,
   font-family: var(--font-dm_sans);
 }
 
+/* custom FontSize */
+.text-body1 {
+  font-size: 18px;
+  line-height: 26px;
+  letter-spacing: 0;
+  font-weight: 500;
+}
+
+.text-caption1 {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0;
+  font-weight: 400;
+}
+
 .inset-center {
   position: absolute;
   top: 50%;
